--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -20,14 +20,97 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    applicationVariants.all { variant ->
+        if (variant.buildType.name.equals("debug")) {
+            variant.mergedFlavor.resourceConfigurations.clear()
+            variant.mergedFlavor.resourceConfigurations.add("en")
+            variant.mergedFlavor.resourceConfigurations.add("xxxhdpi")
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+
+    //region Testing Dependencies
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //endregion
+
+    //region Android Support Dependencies
+
+    implementation SupportLib.support_appcompat_v7
+    implementation SupportLib.support_constraint_layout
+
+    //endregion
+
+    //region Kotlin Support Dependencies
+
+    implementation KotlinLib.kotlin_stdlib_JDK7
+    implementation KotlinLib.kotlin_stdlib_JDK8
+    implementation 'androidx.core:core-ktx:0.3'
+
+    //endregion
+
+    //region Google Gson Dependency
+
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    //endregion
+
+    //region Dagger 2 Dependencies
+
+    implementation Dagger2Lib.dagger2
+    implementation Dagger2Lib.dagger2_support
+
+    // if you use the support libraries
+    kapt Dagger2Lib.dagger2_processor
+    kapt Dagger2Lib.dagger2_compiler
+
+    //endregion
+
+    //region Glide and Glide's OkHttp Integration Dependencies
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+
+    //endregion
+
+    //region ButterKnife Dependencies
+
+    implementation ButterKnifeLib.butterknife
+    kapt ButterKnifeLib.butterknife_compiler
+
+    //endregion
+
+    //region Retrofit2 Dependencies
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation Retrofit2Lib.retrofit
+    implementation Retrofit2Lib.retrofit_gson_converter
+
+    //endregion
+
+    //region RxJava2 and RxAndroid Dependencies
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation RxJava2Lib.rxjava
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    //endregion
+
+    //region RxBinding Dependencies
+
+    implementation RxBinding2Lib.rxbinding
+    implementation RxBinding2Lib.rxbinding_recyclerview_v7
+    implementation RxBinding2Lib.rxbinding_design
+    implementation RxBinding2Lib.rxbinding_appcompat_v7
+    implementation RxBinding2Lib.rxbinding_support_v4
+
+    //endregion
+
 }
