--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
                     kotlin_version           : "1.2.30",
                     constraint_layout_version: "1.0.2",
                     butterknife_version      : "8.8.1",
-                    dagger_version           : "2.11"
+                    dagger_version           : "2.14.1"
     ]
 
     ext.SupportLib = [
@@ -29,9 +29,7 @@ buildscript {
     ext.RxBinding2Lib = [
             rxbinding                : "com.jakewharton.rxbinding2:rxbinding:${versions.rxbinding}",
             rxbinding_recyclerview_v7: "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:${versions.rxbinding}",
-            rxbinding_design         : "com.jakewharton.rxbinding2:rxbinding-design:${versions.rxbinding}",
-            rxbinding_appcompat_v7   : "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${versions.rxbinding}",
-            rxbinding_support_v4     : "com.jakewharton.rxbinding2:rxbinding-support-v4:${versions.rxbinding}"
+            rxbinding_appcompat_v7   : "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${versions.rxbinding}"
     ]
 
     ext.ButterKnifeLib = [
