--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
 
     //region Glide and Glide's OkHttp Integration Dependencies
 
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation GlideLib.glide
+    kapt GlideLib.glide_compiler
     implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
 
     //endregion
