--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
                     retrofit                 : "2.4.0",
                     rxjava                   : "2.1.12",
                     rxbinding                : "2.1.1",
-                    kotlin_version           : "1.2.30",
+                    kotlin_version           : "1.2.41",
                     constraint_layout_version: "1.0.2",
                     butterknife_version      : "8.8.1",
                     dagger_version           : "2.14.1",
@@ -60,7 +60,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha14'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
