updated android studio version to 3.2.0-alpha15

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     //region Dagger 2 Dependencies
 
     implementation Dagger2Lib.dagger2
+    implementation Dagger2Lib.dagger2_android
     implementation Dagger2Lib.dagger2_support
 
     // if you use the support libraries
