--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
 
-    ext.versions = [support_lib              : "26.1.0",
+    ext.versions = [support_lib              : "1.0.0-alpha1",
                     retrofit                 : "2.4.0",
                     rxjava                   : "2.1.12",
                     rxbinding                : "2.1.1",
                     kotlin_version           : "1.2.41",
                     constraint_layout_version: "1.0.2",
                     butterknife_version      : "8.8.1",
-                    dagger_version           : "2.14.1",
+                    dagger_version           : "2.15",
                     glide_version            : "4.7.1"
     ]
 
@@ -39,7 +39,8 @@ buildscript {
     ]
 
     ext.Dagger2Lib = [
-            dagger2          : "com.google.dagger:dagger-android:${versions.dagger_version}",
+            dagger2          : "com.google.dagger:dagger:${versions.dagger_version}",
+            dagger2_android  : "com.google.dagger:dagger-android:${versions.dagger_version}",
             dagger2_support  : "com.google.dagger:dagger-android-support:${versions.dagger_version}",
             dagger2_processor: "com.google.dagger:dagger-android-processor:${versions.dagger_version}",
             dagger2_compiler : "com.google.dagger:dagger-compiler:${versions.dagger_version}"
@@ -60,7 +61,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha14'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
